--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -6,15 +6,6 @@
     }
 }
 
-body:not(.jankx-base) {
-    >:not(.main-content-sidebar) {
-        .jankx-container {
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-    }
-}
-
 .screen-reader-text {
     position: absolute;
     top: -10000em;
