--- a/sass/_footer_widgets.scss
+++ b/sass/_footer_widgets.scss
@@ -1,14 +1,3 @@
-.footer-widgets-area {
-    .widgets-area-inner {
-        margin-left: -10px;
-        margin-right: -10px;
-    }
-    .jankx-footer-widget {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-}
-
 .widgets-area-inner {
     display: flex;
     flex-wrap: wrap;
