--- a/sass/_jankx_elements.scss
+++ b/sass/_jankx_elements.scss
@@ -44,9 +44,6 @@
 /** Component */
 .jankx-tabs {
     display: flex;
-
-    .tab {
-    }
 }
 
 .post-content {
