--- a/sass/_post_layout.scss
+++ b/sass/_post_layout.scss
@@ -2,34 +2,19 @@
     &[class*="columns-"] {
         display: flex;
         flex-wrap: wrap;
-        margin-left: -10px;
-        margin-right: -10px;
 
         .loop-item {
             width: 100%;
-            padding-left: 10px;
-            padding-right: 10px;
         }
     }
-    margin-left: -10px;
-    margin-right: -10px;
     .loop-item {
         margin-bottom: 20px;
-        padding-left: 10px;
-        padding-right: 10px;
     }
 }
 
 .post {
     ul.post-metas {
         margin-top: 10px;
-    }
-}
-
-.carousel-layout {
-    .splide__arrows {
-        padding-left: 10px;
-        padding-right: 10px;
     }
 }
 
@@ -70,14 +55,6 @@
 }
 
 @media (min-width: 1200px) {
-    .jankx-posts {
-        &.columns- {
-            &4 {
-                .loop-item {
-                }
-            }
-        }
-    }
 }
 
 
@@ -131,12 +108,6 @@
             .jankx-posts-layout-inner {
                 display: flex;
                 flex-wrap: wrap;
-                margin-left: -10px;
-                margin-right: -10px;
-            }
-            .post-large-image,.jankx-posts {
-                padding-left: 10px;
-                padding-right: 10px;
             }
             .post-large-image {
                 flex: 65%;
